--- a/compiled/test.html
+++ b/compiled/test.html
@@ -3,6 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>Test page</title>
+
+  <style data-embed>
+    /* reset */
+    #outlook a {padding:0;} /* Force Outlook to provide a "view in browser" menu link. */
+    .ExternalClass {width:100%;} /* Force Hotmail to display emails at full width */
+    .ExternalClass, .ExternalClass p, .ExternalClass span, .ExternalClass font, .ExternalClass td, .ExternalClass div {line-height: 100%;} /* Forces Hotmail to display normal line spacing.  More on that: http://www.emailonacid.com/forum/viewthread/43/ */
+    p {margin: 0; padding: 0; font-size: 0px; line-height: 0px;} /* squash Exact Target injected paragraphs */
+    table td {border-collapse: collapse;} /* Outlook 07, 10 padding issue fix */
+    table {border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; } /* remove spacing around Outlook 07, 10 tables */
+  </style>
+
+  <style>
+    * {
+      background-color: green;
+    }
+  </style>
+
   <link rel="stylesheet" href="../assets/stylesheets/style.css">
 </head>
 <body>
@@ -12,6 +29,8 @@
 
 <div>
   Main page content
+
+  <p>sddsjhds</p>
 </div>
 </body>
 </html>
