--- a/inlined/test.html
+++ b/inlined/test.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
-<html lang="en" style="border: 1px solid red;">
+<html lang="en" style="background-color: green; border: 1px solid red;">
 <head>
   <meta charset="UTF-8">
   <title>Test page</title>
+
+  <style>
+    /* reset */
+    #outlook a {padding:0;} /* Force Outlook to provide a "view in browser" menu link. */
+    .ExternalClass {width:100%;} /* Force Hotmail to display emails at full width */
+    .ExternalClass, .ExternalClass p, .ExternalClass span, .ExternalClass font, .ExternalClass td, .ExternalClass div {line-height: 100%;} /* Forces Hotmail to display normal line spacing.  More on that: http://www.emailonacid.com/forum/viewthread/43/ */
+    p {margin: 0; padding: 0; font-size: 0px; line-height: 0px;} /* squash Exact Target injected paragraphs */
+    table td {border-collapse: collapse;} /* Outlook 07, 10 padding issue fix */
+    table {border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; } /* remove spacing around Outlook 07, 10 tables */
+  </style>
+
+  
+
   
 </head>
-<body style="border: 1px solid red;">
+<body style="background-color: green; border: 1px solid red;">
   
 
-<h1 style="border: 1px solid red;">header stuff</h1>
+<h1 style="background-color: green; border: 1px solid red;">header stuff</h1>
 
-<div style="border: 1px solid red;">
-  Main page contentdssd
+<div style="background-color: green; border: 1px solid red;">
+  Main page content
+
+  <p style="background-color: green; border: 1px solid red;">sddsjhds</p>
 </div>
 </body>
 </html>
